edited index and style
conflict line in index.html.
Changed body to blue in style.css

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
   box-sizing: inherit;
 }
 
-body{background:#fff; margin:0px; font-family:arial;}
+body{background:#blue; margin:0px; font-family:arial;}
 
 form{
     width:700px;
